Fix Bug 387598 - Send As ICalendar Address Selection has problems

FIXED-IN: 5.13.0
BUG: 387598